Changed deprecated method newInstance()